--- a/css/style.css
+++ b/css/style.css
@@ -894,7 +894,9 @@ header .head-body div p {margin-top: 10px; color: #FFF}
     width: 100%;
     height: 35px;
     margin-bottom: 10px;
-    background-color: #DDD
+    background-color: #DDD;
+    border: none;
+    padding: 0px 10px;
 }
 .contact .form .form-right {
     width: 40%;
@@ -907,14 +909,17 @@ header .head-body div p {margin-top: 10px; color: #FFF}
     width: 100%;
     height: 125px;
     resize: none;
-    background-color: #DDD
+    background-color: #DDD;
+    border: none;
+    padding: 10px 10px
 }
 .contact .form .form-right button {
     width: 100%;
     height: 35px;
     background-color: var(--main--color);
     color: #FFF;
-    cursor: pointer
+    cursor: pointer;
+    border: none;
 }
 /*End contact us*/
 
